@@ -5,6 +5,7 @@
   - rename Std::Array::Util equals_xxx to eq_xxxs
   - fix windows source file reading bug
   - inline source code must be in .inline instead of .native
+  - fix temporary directory bug
 0.0325 2018-04-13
   - remove template feature
   - rename Math to Std::Math
